--- a/css/layout.css
+++ b/css/layout.css
@@ -31,7 +31,7 @@
   padding: 80px 0;
   margin-top: 60px;
   
-  background-color: #7ab55c;
+  background-color: #24292e;
 }
 .layout-depoimento{
   padding: 80px 0;
